[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI_Components/CustomNodes/Node_Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI_Components/CustomNodes/Node_ButtonMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI_Components/CustomNodes/Node_CirclePlanets.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Script_MainMenu.gd" type="Script" id=4]
[ext_resource path="res://images/Planet_Pink_Big.png" type="Texture" id=5]
[ext_resource path="res://images/Planet_Brown_Big.png" type="Texture" id=6]
[ext_resource path="res://images/Planet_Yellow_Big.png" type="Texture" id=7]
[ext_resource path="res://images/Logo.png" type="Texture" id=8]
[ext_resource path="res://images/Planet_Earth_Big.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Planet_Purple:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 98, 203 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planet_Earth:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 235, 645 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planet_Pink:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1021, 713 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Planet_Brown:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1336, 431 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Planet_Yellow:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1132, 54 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Button_Play:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 688, 536 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Button_Exit:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 688, 635 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Text_Logo:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 400, 52 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "down_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Planet_Purple:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6, 3 ),
"transitions": PoolRealArray( 2, 2, 1 ),
"update": 0,
"values": [ Vector2( 98, 199.88 ), Vector2( 98, 180 ), Vector2( 98, 1202.88 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planet_Earth:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 235, 645 ), Vector2( 235, 625 ), Vector2( 235, 1648 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planet_Pink:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.8, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1021, 709.75 ), Vector2( 1021, 680 ), Vector2( 1021, 1712.75 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Planet_Brown:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.6, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1336, 431 ), Vector2( 1336, 410 ), Vector2( 1336, 1434 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Planet_Yellow:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1132, 54 ), Vector2( 1132, 34 ), Vector2( 1132, 1029 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Text_Logo:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.2, 0.6, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 400, 52 ), Vector2( 400, 32 ), Vector2( 400, 1027 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Button_Play:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.1, 0.5, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 688, 536 ), Vector2( 688, 500 ), Vector2( 688, 1483 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Button_Exit:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 3 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 688, 635 ), Vector2( 688, 610 ), Vector2( 688, 1691 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "planets_animation"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Planet_Purple:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 2.1, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 98, 203 ), Vector2( 98, 190 ), Vector2( 98, 203 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Planet_Earth:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 1.9, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 235, 645 ), Vector2( 235, 630 ), Vector2( 235, 645 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Planet_Pink:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 2.2, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1021, 713 ), Vector2( 1021, 700 ), Vector2( 1021, 713 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Planet_Brown:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 1.8, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1336, 431 ), Vector2( 1336, 418 ), Vector2( 1336, 431 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Planet_Yellow:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 2, 3.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1132, 54 ), Vector2( 1132, 40 ), Vector2( 1132, 54 ) ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Button_Play" parent="." instance=ExtResource( 2 )]
margin_left = 688.0
margin_top = 536.0
margin_right = 915.0
margin_bottom = 608.0
focus_neighbour_top = NodePath("../Button_Exit")
text = "Play"
reference_path = "res://UI_Components/Scenes/Scene_Game.tscn"
start_focused = true

[node name="Button_Exit" parent="." instance=ExtResource( 2 )]
margin_left = 688.0
margin_top = 635.0
margin_right = 915.0
margin_bottom = 707.0
focus_neighbour_bottom = NodePath("../Button_Play")
text = "Exit"

[node name="Planet_Purple" parent="." instance=ExtResource( 3 )]
margin_left = 98.0
margin_top = 203.0
margin_right = 293.0
margin_bottom = 398.007
background_path = "res://images/Background_Purple.png"
planet_path = "res://images/Planet_Purple.png"
planet_player = "res://images/Player_Purple.png"

[node name="Planet_Earth" parent="." instance=ExtResource( 3 )]
margin_left = 235.0
margin_top = 645.0
margin_right = 430.0
margin_bottom = 840.0
texture = ExtResource( 9 )
background_path = "res://images/Background_Earth.png"
planet_path = "res://images/Planet_Earth.png"
planet_player = "res://images/Player_Earth.png"

[node name="Planet_Pink" parent="." instance=ExtResource( 3 )]
margin_left = 1021.0
margin_top = 713.0
margin_right = 1216.0
margin_bottom = 908.0
texture = ExtResource( 5 )
is_selected = true
background_path = "res://images/Background_Pink.png"
planet_path = "res://images/Planet_Pink.png"
planet_player = "res://images/Player_Pink.png"

[node name="Planet_Brown" parent="." instance=ExtResource( 3 )]
margin_left = 1336.0
margin_top = 431.0
margin_right = 1531.0
margin_bottom = 625.979
texture = ExtResource( 6 )
background_path = "res://images/Background_Brown.png"
planet_path = "res://images/Planet_Brown.png"
planet_player = "res://images/Player_Brown.png"

[node name="Planet_Yellow" parent="." instance=ExtResource( 3 )]
margin_left = 1132.0
margin_top = 54.0
margin_right = 1327.0
margin_bottom = 249.0
texture = ExtResource( 7 )
background_path = "res://images/Background_Yellow.png"
planet_path = "res://images/Planet_Yellow.png"
planet_player = "res://images/Player_Yellow.png"

[node name="Text_Logo" type="TextureRect" parent="."]
margin_left = 400.0
margin_top = 52.0
margin_right = 1371.0
margin_bottom = 426.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/down_animation = SubResource( 3 )
anims/planets_animation = SubResource( 2 )

[connection signal="pressed" from="Button_Play" to="." method="_on_Button_Play_pressed"]
[connection signal="pressed" from="Button_Exit" to="." method="_on_Button_Exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
